CSS for player card. Fixed overflow issue, approvals/disapproval table, final touches

--- a/website/public/css/ui/search_results/player_card.less
+++ b/website/public/css/ui/search_results/player_card.less
@@ -1,29 +1,88 @@
 #player-card-container {
-  background: @color-grey;
-  color: @color-grey;
+  color: @color-grey-dark;
+  display: inline-block;
   width: 300px;
+  min-width: 300px;
   height: 350px;
-  margin: 10px 3px 5px 10px;
+  min-height: 350px;
+  margin: 35px 0px 35px 35px;
   border: 1px solid @color-blue-grey;
   z-index: 10;
 
   .header {
     background-color: @color-grey-light;
+    color: @color-grey-dark;
     height: 115px;
   }//.header
+  .avatar{
+    background-image: url("http://cdnimages2013.cgdata.com/219837_cgau-38k-xe-SummonericonBearjyl.jpg");
+    background-position: center;
+    background-size: 150px 150px; 
+    position: relative;
+    margin-top: -67.5px;
+    margin-left: 75px;
+    height: 150px;
+    width: 150px;
+    border-radius: 25vw;
+    z-index: 1;
+  } //.avatar
+  .avatar-surround{
+    z-index: 0;
+    position: relative;
+    margin-top: -155px;
+    margin-left: 70px;
+    height: 160px;
+    width: 160px;
+    background-color: @color-white;
+    border-radius: 25vw;
+  }
+  .region-tag{
+    position:relative;
+    color: @color-grey-2;
+  }
 
   .body {
+    margin-top: -115px;
+    display: table;
     background-color: @color-white;
     height: 235px;
+    width: 300px;
+    vertical-align: middle;
+    .username{
+      padding-top: 115px;
+      width: 300px;
+      display: inline-block;
+      margin-left: auto;
+      text-align: center;
+      font-size: 22px;
+      color: @color-grey-dark;
+    }//.username
+    .review-table{
+      width: 300px;
+      margin-top: -20px;
+      .review-table-row{
+        height: 30px;
+        .review-table-cell{
+          color:@color-grey-2;
+          text-align:center;
+        }
+        }//.review-table-row;
+      }//.review-table;
   }//.body
 
   .view-profile{
-    margin-bottom: 0px;
+    margin-top: -10px;
+    position: relative;
     font-size: 25px;
     width: 100%;
     background-color: @color-white;
-    color: @color-grey-light;
-    border: 1px solid @color-grey-light;
+    color: @color-grey-2;
+    border-bottom: 2px solid @color-blue-grey;
+    border-top: 2px solid @color-blue-grey;
     height: 35px;
     }//.view-profile
+  .uk-button{
+    width: 100%;
+    height: 100%;
+  }
 }//#player-card-container
